# CE_project

./: .gitignore  Pipfile  README.md  pyproject.toml
src/: fno_model.py
src/CE_sandbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ns_solvers/: boundary_conditions.py  driver.py
src/ns_solvers/fd_solvers/: chorins_method.py
src/ns_solvers/grid/: __init__.py  uniform.py
src/vtk_parser/: __init__.py  structured_reader.py
