[build-system]
requires = [
    "setuptools >= 61.0",
    "wheel",
    "plotly",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "CE_sandbox"
version = "0.1.0"
dependencies = [
    "plotly",
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ns_solvers", "vtk_parser"]

[project.scripts]
ns_driver = "ns_solvers.driver:main"